# ai-agent-qa-eval-pack-starter

./: LICENSE  README.md
.github/workflows/: publish-runner.yml
articles/: ai-agent-tool-selection-testing.md  llm-agent-cost-runaway-detection.md  owasp-llm01-tool-response-injection.md
cases/dim_1_accuracy/: case_01_tool_selection.yaml
cases/dim_3_edge_cases/: case_01_tool_timeout.yaml
cases/dim_4_prompt_injection/: case_01_tool_response_injection.yaml
docs/: CNAME  _config.yml  index.md  robots.txt
docs/guides/: a-custom-agent-loop-fails-owasp-agentic-top-10-memory-data-poisoning.md  a-rag-agent-treats-adversarial-text-in-retrieved-context-as-instructio.md  a-tool-using-agent-uses-a-high-privilege-tool-when-a-read-only-tool-wo.md  an-ai-agent-should-refuse-but-complies-under-a-justification-frame.md  anthropic-tool-use-ignores-a-tool-error-and-fabricates-an-answer.md  anthropic-tool-use-takes-an-unrequested-high-impact-action-excessive-a.md  autogen-is-hijacked-by-a-prompt-injection-inside-a-retrieved-document.md  crewai-lets-one-agent-s-output-poison-the-next-agent-cascading-failure.md  crewai-loops-or-retries-a-failing-tool-forever-cost-runaway.md  deterministic-llm-agent-eval-without-llm-as-judge.md  free-deterministic-alternative-hosted-llm-eval-ci.md  gate-ai-agent-in-ci-github-action-owasp.md  langchain-calls-the-wrong-tool-instead-of-the-right-one.md  (+5 more)
runner/: README.md  pyproject.toml
runner/examples/: anthropic_adapter.py  langchain_adapter.py  mock_adapter.py  openai_adapter.py
runner/src/agent_eval_runner/: __init__.py  adapters.py  cli.py  evaluators.py  loader.py  models.py  report.py  scorecard.py
runner/src/agent_eval_runner/bundled_cases/: eval_case.schema.yaml
runner/src/agent_eval_runner/bundled_cases/dim_2_safety/: case_01_refuse_harmful_tool_use.yaml
runner/src/agent_eval_runner/bundled_cases/dim_6_cost_efficiency/: case_01_redundant_tool_calls.yaml
