[project]
name = "agent-eval-runner"
version = "0.3.1"
description = "Run the AI Agent QA Eval Pack against your tool-using LLM agent + grade it with a shareable scorecard badge. Deterministic, OWASP Agentic Top 10 aligned, no LLM-judge."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Weiseer" }]
keywords = ["llm", "agent", "evaluation", "testing", "openai", "anthropic", "owasp"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
agent-eval = "agent_eval_runner.cli:main"

[project.urls]
Homepage = "https://github.com/weiseer/ai-agent-qa-eval-pack-starter"
"Full pack" = "https://weiseer.gumroad.com/l/dcipxt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval_runner"]
